@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.playlist.o2tv" name="Playlist O2TV" version="0.5" provider-name="JiRo, úprava addon Štěpána Orta">
+<addon id="service.playlist.o2tv" name="Playlist O2TV" version="0.6" provider-name="JiRo, úprava addon Štěpána Orta">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="script.module.requests" version="2.7.0"/>
@@ -9,6 +9,9 @@
   </extension>
   <extension point="xbmc.addon.metadata">
     <news>
+ 2019-03-17 [0.6]
+ * Fixed login issues
+ 
  2018-10-21 [0.5]
  * English translation
  * Fixed login issues
